--- a/focused.html
+++ b/focused.html
@@ -117,9 +117,9 @@
 <p><h3>Technologies that enabled auto linking from web content to a definition or other types of resource have been fairly commonplace for several years. They have typically relied on hard coded links to glossaries, lists and other datasets that are relatively small. In addition, they require extra attention and maintenance to keep them up to date and accurate. With the maturity of Linked Data, there is potential to scale these applications to connect larger sets, more dynamically, and with persistent links. </h3></p>
 <h2>What tools or techniques could or should I use?</h2>
 <p><h3>There are many general-purpose encyclopedias and other reference tools available that allow you to find definitions, synonyms, related terms and other useful information that adds context and meaning to a term. Many are well structured and lend themselves for the type of applications the challenge is seeking. These include services such as <a href="http://dbpedia.org/About">DBPedia</a>, <a href="http://www.freebase.com">Freebase</a>, <a href="http://www.opencalais.com">Open Calais</a>, and several others. </h3></p>
-<p><h3>For translating between languages, automatic translation sevices are available. These include http://www.princeton.edu/wordnet/related-projects/ Wordnet and several other projects. </h3></p>
-<p><h3>Visual summaries are another approach for providing an overview on what a text is about. Popular visualizations include word trees, tag clouds, word clouds, and phrase nets (as, for example, on http://www-958.ibm.com/software/analytics/manyeyes/visualizations IBM's Many Eyes). </h3></p>
-<p><h3>The challenge is to select, combine and insert explanatory material that complements the material without distracting or overwhelming readers. Typical 'adaptive' techniques (see Peter Brusilovsky's 'classic' article on http://dl.acm.org/citation.cfm?id=598341 Adaptive Hypermedia) include content-on-demand, adaptive highlighting, stretchtext, pop-ups, comments in the margins, overview maps, visual summaries and content variation. </h3></p>
+<p><h3>For translating between languages, automatic translation sevices are available. These include <a href="http://www.princeton.edu/wordnet/related-projects/">Wordnet</a> and several other projects. </h3></p>
+<p><h3>Visual summaries are another approach for providing an overview on what a text is about. Popular visualizations include word trees, tag clouds, word clouds, and phrase nets (as, for example, on <a href="http://www-958.ibm.com/software/analytics/manyeyes/visualizations">IBM's Many Eyes</a>). </h3></p>
+<p><h3>The challenge is to select, combine and insert explanatory material that complements the material without distracting or overwhelming readers. Typical 'adaptive' techniques (see Peter Brusilovsky's 'classic' article on <a href="http://dl.acm.org/citation.cfm?id=598341">Adaptive Hypermedia</a>) include content-on-demand, adaptive highlighting, stretchtext, pop-ups, comments in the margins, overview maps, visual summaries and content variation. </h3></p>
 <h2>What would make my submission a good one?</h2>
 <p><h3>Ideal submissions would make innovative use of current technologies or even showcase a new technology. Extra consideration will also be given for applications that make use and combine existing data in original ways. As mentioned above, applications should complement and enhance material. Where possible, a submission would be portable. That is, able to be reused with new datasets with a minimal amount adjustments to the application. Additional benchmarks will measure text summarisation techniques. </h3></p>
 <table border=”1” width=”100%”>In this focused track we target applications that:
@@ -131,16 +131,16 @@ offer this “simplification” support to learners in other ways we didn't envi
 
 <h2>Datasets</h2>
 <p><h3>Competitors are encouraged to find content on the web that they would like to incorporate into the Simplificator applications. However, the LinkedUp team has been working to prepare some materials for the competition: </h3></p>
-<ul><h3><li>The http://data.linkededucation.org/linkedup/catalog/ LinkedUp data catalog created for the LinkedUp Challenge contains some scholarly papers which naturally are very complex and a good source for simplification and summarisation. </li><li>
+<ul><h3><li>The <a href="http://data.linkededucation.org/linkedup/catalog/">LinkedUp data catalog</a> created for the LinkedUp Challenge contains some scholarly papers which naturally are very complex and a good source for simplification and summarisation. </li><li>
 </li><li>The LAK Dataset: A large corpus of research literature related to Learning Analytics is publicly available in machine-readable formats. This dataset was curated and launched by researchers from the Society for Learning Analytics Research (SoLAR), the LinkedUp project, and the Educational Technology Institute of the National Research Council of Italy (CNR-ITD). Content from this dataset could also be considered good candidates for material that could be Simplified. For more information about the content, check out the LinkedUp Blog. </li><li>
-</li><li>For the competition,  http://www.elsevier.com Elsevier will be showcasing data and content around the interdisciplenary topic of water use and water footprinting, which measures how individuals and municipalities, companies and industries, use water resources. The field touches on many areas including geography, hydrology, sustainability, water quality, policy, and business. For the Simplificator, it would be interesting to see if the content and data in this collection could be Simplified. In particular, we believe this will provide opportunities for cross-discipline interpretation of texts and data. </li></h3></ul>
+</li><li>For the competition,  <a href="http://www.elsevier.com">Elsevier</a> will be showcasing data and content around the interdisciplenary topic of water use and water footprinting, which measures how individuals and municipalities, companies and industries, use water resources. The field touches on many areas including geography, hydrology, sustainability, water quality, policy, and business. For the Simplificator, it would be interesting to see if the content and data in this collection could be Simplified. In particular, we believe this will provide opportunities for cross-discipline interpretation of texts and data. </li></h3></ul>
 <h2>Requirements</h2>
 <ul><h3><li>'Data-driven' - The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessary available on the Web, but using standard Web protocols. </li><li>
 The application should use at least two other datasets for enriching the resource. </li><li>
 The submission should be innovative and using current technology, making innovative use of existing technologies, or use and combine existing data in original ways. </li></h3></ul>
 
 <h2>Evaluation metrics</h3>
-<ul><h3><li>ROUGE metric (http://en.wikipedia.org/wiki/ROUGE_(metric))</li><li>
+<ul><h3><li><a href="http://en.wikipedia.org/wiki/ROUGE_(metric)">ROUGE metric</a></li><li>
 Runtime performance</li><li>
 Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
 
@@ -182,7 +182,7 @@ or provide recommendation and guidance in any other meaningful and supportive wa
 Efficiency: The evaluation will also compare the response time, requirements in terms of computing resources (from the point of view of the user), as well as the expected scalability of the tools to a large number of learning opportunities and users.</li></h3></ul>
 
 <h2>relationship to use cases</h2>
-<p><h3>Supporting employees' learning development http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth</h3></p>
+<p><h3><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></h3></p>
 
 
 
