--- a/focused.html
+++ b/focused.html
@@ -122,12 +122,12 @@
 <p><h3>The challenge is to select, combine and insert explanatory material that complements the material without distracting or overwhelming readers. Typical 'adaptive' techniques (see Peter Brusilovsky's 'classic' article on <a href="http://dl.acm.org/citation.cfm?id=598341">Adaptive Hypermedia</a>) include content-on-demand, adaptive highlighting, stretchtext, pop-ups, comments in the margins, overview maps, visual summaries and content variation. </h3></p>
 <h2>What would make my submission a good one?</h2>
 <p><h3>Ideal submissions would make innovative use of current technologies or even showcase a new technology. Extra consideration will also be given for applications that make use and combine existing data in original ways. As mentioned above, applications should complement and enhance material. Where possible, a submission would be portable. That is, able to be reused with new datasets with a minimal amount adjustments to the application. Additional benchmarks will measure text summarisation techniques. </h3></p>
-<table border=”1” width=”100%”>In this focused track we target applications that:
+<p><h3><strong>In this focused track we target applications that:</strong></h3></p>
 
-<ul><li>make complex,domain-specific texts easier to understand to novice/non-expert people by elaborating a simple summary</li><li>
+<ul><h3><li>make complex,domain-specific texts easier to understand to novice/non-expert people by elaborating a simple summary</li><li>
 analyse and summarise complex abstracts and research in simpler terms - eventually a ‘hierarchy of simplicity’ to create ‘versions’ for different ages and abilities (via a simple and intuitive textual/graphical representation, i.e. knowledge map) </li><li>
 link difficult words to  http://en.wiktionary.org/wiki/Wiktionary:Main_Page wiktionary / http://en.wikipedia.org/wiki/Main_Page wikipedia, offering wiki-style crowdsourcing of improvements</li><li>
-offer this “simplification” support to learners in other ways we didn't envisage above</li></ul></table>
+offer this “simplification” support to learners in other ways we didn't envisage above</li></h3></ul>
 
 <h2>Datasets</h2>
 <p><h3>Competitors are encouraged to find content on the web that they would like to incorporate into the Simplificator applications. However, the LinkedUp team has been working to prepare some materials for the competition: </h3></p>
@@ -148,8 +148,8 @@ Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
  <p><h3>ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage. </h3></p>
 
 <h2>Relationship to use cases</h2>
-<ul><h3><li>Simplify http://linkedup-challenge.org/usecases.html#simplify</li><li>
-Educationizer http://linkedup-challenge.org/usecases.html#educationizer</li><li>
+<ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a><</li><li>
+<a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a> </li><li>
 
 <div id="Recommender" name="Recommender" class="block">
               <h1>Track 2: Recommender</h1>
@@ -163,13 +163,13 @@ Educationizer http://linkedup-challenge.org/usecases.html#educationizer</li><li>
  <p><h3>A large variety of approaches can be considered, relying and combining techniques from information retrieval, user profiling, recommendation and data matching. </h3></p>
 What would make my submission a good one? 
 <p><h3>We are not necessarily looking at a polished application in terms of user interface and attractiveness. Indeed, we are seeking clever ways and techniques to suggest learning opportunities to individual users effectively and efficiently. In other words, the application should bring to the attention of the user the most relevant opportunities, preferably making explicit the potential connections both between different, complementary opportunities, and from the user profile to the opportunities, to enable an effective use of the tool by real users. The tool should be efficient in the sense that it should respond in times reasonable considering the envisaged scenario, and without requiring the user to have computing resources beyond their reach. It should be clear that the application would scale with the current increase in the number of Web Data-reachable learning opportunities.</h3></p>
-<p><h3>In this focused track we target applications that: </h3></p>
-<table border=”1” width=”100%”>
+<p><h3><strong></strong>In this focused track we target applications that: </strong></h3></p>
+
 <ul><h3><li>Are based on an employee's personal goals for professional development, develop an appropriate curriculum of courses and other resources that would allow them to stay current with their field and provide opportunity to excel in their career. </li><li>
 or are based on available course description, topics, etc. and on the history of the user (e.g., previous courses taken, location, skills already acquired, job targeted), find what next courses to enroll to (traditional university courses, online and distance learning or MOOCs). </li><li>
 or are based on an employee's current skills [and level] (from a resume, LinkedIn or other source…) and desired skills then suggest a learning path</li><li>
 or, monitor the learner's progress through the learning path, (with certain criteria) provide real-time hints and suggestions about how to progress </li><li>
-or provide recommendation and guidance in any other meaningful and supportive way you can imagine and we didn't envisage so far</li></ul></table>
+or provide recommendation and guidance in any other meaningful and supportive way you can imagine and we didn't envisage so far</li></h3></ul>
 <h2>Datasets</h2>
  <p><h3>Many sources of metadata are available nowadays regarding learning opportunities including, from the Linked Education Cloud, data about courses available at various universities and metadata of open educational resources. Of course, any other source can also be considered. Information about the user (interests, education history, skills, etc.) can be obtained from their profile on social platforms, which should be access directly through the relevant APIs. Other sources of information about the user, such as explicit input and other expressions of interests can also be considered.</h3></p>
 <h2>Requirements</h2>
