--- a/focused.html
+++ b/focused.html
@@ -126,7 +126,7 @@
 
 <ul><h3><li>make complex,domain-specific texts easier to understand to novice/non-expert people by elaborating a simple summary</li><li>
 analyse and summarise complex abstracts and research in simpler terms - eventually a ‘hierarchy of simplicity’ to create ‘versions’ for different ages and abilities (via a simple and intuitive textual/graphical representation, i.e. knowledge map) </li><li>
-link difficult words to  http://en.wiktionary.org/wiki/Wiktionary:Main_Page wiktionary / http://en.wikipedia.org/wiki/Main_Page wikipedia, offering wiki-style crowdsourcing of improvements</li><li>
+link difficult words to  <a href="http://en.wiktionary.org/wiki/Wiktionary:Main_Page">wiktionary</a> / <a href="http://en.wikipedia.org/wiki/Main_Page">wikipedia</a>, offering wiki-style crowdsourcing of improvements</li><li>
 offer this “simplification” support to learners in other ways we didn't envisage above</li></h3></ul>
 
 <h2>Datasets</h2>
