--- a/focused.html
+++ b/focused.html
@@ -72,8 +72,8 @@
 
     <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>    
     <li><b>Focused Tracks</b></li>
-        <li><a href="#Simplificator">Simplificator =></a></li>
-      <li><a href="#Recommendations">Recommendations =></a></li>
+        <li><a href="#simplificator">Simplificator =></a></li>
+      <li><a href="#recommender">Recommender =></a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
 		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
       </ul>
@@ -105,7 +105,7 @@
 		  <!-- .block -->
 
 		  
-		  <div id="Simplificator" name="Simplificator" class="block">
+		  <div id="simplificator" name="simplificator" class="block">
               <h1>Track 1: Simplificator</h1>
 
 <h2>What is it and why is it important?</h2>
