--- a/focused.html
+++ b/focused.html
@@ -144,8 +144,10 @@ The submission should be innovative and using current technology, making innovat
 Runtime performance</li><li>
 Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
 
-<p><h3>Benchmarks: text summarisation techniques etc.</h3></p>
- <p><h3>ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage. </h3></p>
+<h2>Benchmarks</h2>
+
+<p><h3>Text summarisation techniques etc.</h3></p>
+ <p><h3>Ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage. </h3></p>
 
 <h2>Relationship to use cases</h2>
 <ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a><</li><li>
