--- a/focused.html
+++ b/focused.html
@@ -150,7 +150,7 @@ Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
 <p><h3>Ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage.</h3></p>
 
 <h2>Relationship to use cases</h2>
-<ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a><</li><li>
+<ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>
 <a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></li></h3></ul>
 
 <div id="Recommender" name="Recommender" class="block">
