--- a/focused.html
+++ b/focused.html
@@ -153,7 +153,11 @@ Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
 <ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>
 <a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></li></h3></ul>
 
+</div>
+		  <!-- .block -->
 <div id="Recommender" name="Recommender" class="block">
+
+
               <h1>Track 2: Recommender</h1>
 
 
