--- a/focused.html
+++ b/focused.html
@@ -185,8 +185,8 @@ or provide recommendation and guidance in any other meaningful and supportive wa
 <ol><h3><li>Effectiveness: The proposed tools will be tested through applying them with the profiles of a number of test users. The evaluation will compare the relevance of the suggested opportunities from the different tools, taking into consideration the different types of opportunities that can be returned (courses, MOOCs, open education resources), as well as how easy the tools make it for the user to assess the relevance of their results. </li><li>
 Efficiency: The evaluation will also compare the response time, requirements in terms of computing resources (from the point of view of the user), as well as the expected scalability of the tools to a large number of learning opportunities and users.</li></h3></ul>
 
-<h2>relationship to use cases</h2>
-<p><h3><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></h3></p>
+<h2>Relationship to use cases</h2>
+<ul><li><h3><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></h3></li></ul>
 
 
 
