--- a/focused.html
+++ b/focused.html
@@ -131,18 +131,18 @@ offer this “simplification” support to learners in other ways we didn't envi
 
 <h2>Datasets</h2>
 <p><h3>Competitors are encouraged to find content on the web that they would like to incorporate into the Simplificator applications. However, the LinkedUp team has been working to prepare some materials for the competition: </h3></p>
-<ul><h3><li>The <a href="http://data.linkededucation.org/linkedup/catalog/">LinkedUp data catalog</a> created for the LinkedUp Challenge contains some scholarly papers which naturally are very complex and a good source for simplification and summarisation. </li><li>
+<ul><li><h3>The <a href="http://data.linkededucation.org/linkedup/catalog/">LinkedUp data catalog</a> created for the LinkedUp Challenge contains some scholarly papers which naturally are very complex and a good source for simplification and summarisation. </li><li>
 The <a href="http://lak.linkededucation.org">LAK Dataset</a>: A large corpus of research literature related to Learning Analytics is publicly available in machine-readable formats. This dataset was curated and launched by researchers from the Society for Learning Analytics Research (SoLAR), the LinkedUp project, and the Educational Technology Institute of the National Research Council of Italy (CNR-ITD). Content from this dataset could also be considered good candidates for material that could be Simplified. For more information about the content, check out the LinkedUp Blog. </li><li>
 For the competition, <a href="http://www.elsevier.com">Elsevier</a> will be showcasing data and content around the interdisciplenary topic of water use and water footprinting, which measures how individuals and municipalities, companies and industries, use water resources. The field touches on many areas including geography, hydrology, sustainability, water quality, policy, and business. For the Simplificator, it would be interesting to see if the content and data in this collection could be Simplified. In particular, we believe this will provide opportunities for cross-discipline interpretation of texts and data. </li></h3></ul>
 <h2>Requirements</h2>
 <ul><h3><li>'Data-driven' - The submission should use at least one dataset; using web data and providing number of resources. Web data does not necessary available on the Web, but using standard Web protocols. </li><li>
 The application should use at least two other datasets for enriching the resource. </li><li>
-The submission should be innovative and using current technology, making innovative use of existing technologies, or use and combine existing data in original ways. </li></h3></ul>
+The submission should be innovative and using current technology, making innovative use of existing technologies, or use and combine existing data in original ways. </h3></li></ul>
 
 <h2>Evaluation metrics</h3>
-<ul><h3><li><a href="http://en.wikipedia.org/wiki/ROUGE_(metric)">ROUGE metric</a></li><li>
+<ul><li><h3><a href="http://en.wikipedia.org/wiki/ROUGE_(metric)">ROUGE metric</a></li><li>
 Runtime performance</li><li>
-Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
+Manual evaluation of quality, coverage, representativeness etc. </h3></li></ul>
 
 <h2>Benchmarks</h2>
 
@@ -150,8 +150,8 @@ Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
 <p><h3>Ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage.</h3></p>
 
 <h2>Relationship to use cases</h2>
-<ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>
-<a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></li></h3></ul>
+<ul><li><h3></h3><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>
+<a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></h3></li></ul>
 
 </div>
 		  <!-- .block -->
