--- a/focused.html
+++ b/focused.html
@@ -186,7 +186,7 @@ or provide recommendation and guidance in any other meaningful and supportive wa
 Efficiency: The evaluation will also compare the response time, requirements in terms of computing resources (from the point of view of the user), as well as the expected scalability of the tools to a large number of learning opportunities and users.</li></h3></ul>
 
 <h2>Relationship to use cases</h2>
-<ul><li><h3><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></h3></li></ul>
+<ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></li></h3></ul>
 
 
 
