--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
 <li>The focused track will be for development of prototypes that answer the specific 'problems' give below.</li></ul></h3>
 
 <ul><li>Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
-</li><li></li>Recommender - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
-<p><h3>Questions to follow</h3></p>
+</li><li>Recommender - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
+<p><h3>More information to follow</h3></p>
 	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
 			 <h3><ul>
 <li>Open track: €5000 (1st), €2500 (2nd), €2500 (3rd)
