--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
 
 <h3><ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
 <li>The focused track will be for development of prototypes that answer the specific 'problems' give below.</li>
-<li><ul><li>Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
+<ul><li>Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
 </li><li>Recommender - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
-</li>
+
 	
 	
 </ul></h3>
