--- a/focused.html
+++ b/focused.html
@@ -100,7 +100,7 @@
 
 <p><h3>The focused track in the Vidi competition is for development of prototypes that solve a particular problem:</h3></p>
 <ul><h3><li><a href="#simplificator">Simplificator</a> - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.</li>
-<li><a href="#recommender">Recommender</a> - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources. </li></h3></ul>
+<li><a href="#pathfinder">Pathfinder</a> - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources. </li></h3></ul>
 </div>
 		  <!-- .block -->
 
