--- a/index.html
+++ b/index.html
@@ -122,21 +122,21 @@
  if you are looking for further inspiration.</h3></p>
 
 			 <p> <h3>Alternatively, you may already have an idea that you’ve started developing and  we're keen to help you take this further.</h3></p>
-<p><h3></h3></p>If you are interested in submitting something for the Vidi competition then please <a href="https://docs.google.com/a/okfn.org/forms/d/1snz3QdGrD20-uIusn_MjDSmcU7R_HSAKIXT9JHgipBA/viewform">fill in our online form</a> and indicate if you have any questions or areas we could help you with.</h3></p>
+<p><h3>If you are interested in submitting something for the Vidi competition then please <a href="https://docs.google.com/a/okfn.org/forms/d/1snz3QdGrD20-uIusn_MjDSmcU7R_HSAKIXT9JHgipBA/viewform">fill in our online form</a> and indicate if you have any questions or areas we could help you with.</h3></p>
 
 <p><h3><strong>Vidi Tracks</strong></h3></p>
 
 <p><h3>The Vidi competition will comprise of two tracks: </h3></p>
 
-<h3><ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
+<ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
 <li>The focused track will be for development of prototypes that answer the specific 'problems' give below.</li>
 </ul></h3>
 
 <p><h3>Focused tracks</h3></p>
 
-<ul><li>Track 1: Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
+<h3><ul><li>Track 1: Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
 </li><li>Track 2: Pathfinder - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
-</li></ul>
+</li></ul></h3>
 
 <p>More information to follow</p>
 	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
