--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
 <p><h3>The Vidi competition will comprise of two tracks: </h3></p>
 
-<ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
+<h3><ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
 <li>The focused track will be for development of prototypes that answer the specific 'problems' give below.</li>
 </ul></h3>
 
@@ -138,7 +138,7 @@
 </li><li>Track 2: Pathfinder - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
 </li></ul></h3>
 
-<p>More information to follow</p>
+<p><h3>More information to follow</h3></p>
 	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
 			 <h3><ul>
 <li>Open track: €3000 (1st), €2000 (2nd), €1000 (3rd)
