--- a/focused.html
+++ b/focused.html
@@ -107,6 +107,9 @@
 		  
 		  <div id="simplificator" name="simplificator" class="block">
               <h1>Track 1: Simplificator</h1>
+              
+              <h2></h2>What should I do?</h2>
+<p><h3>Develop a tool/application that provides a simplified version of domain-specific, complex documents, making complex, sectoral texts easier to understand to novice/non-expert people.</h3></p>
 
 <h2>What is it and why is it important?</h2>
 <p><h3>Whether in the sciences or humanities, most of today's knowledge and reports about breakthrough research is domain-specific and written up by experts. People trying to understand and share ideas and concepts about disciplines that they are new to face challenges while attempting to get up to speed. A significant aspect of this is needing to learn domain-specific terms and ideas that can rapidly put knowledge in an appropriate context. Seemingly impenetrable ideas can be understood if access and references to simpler, less domain specific, or language appropriate resources are available. </h3></p>
