--- a/focused.html
+++ b/focused.html
@@ -108,7 +108,7 @@
 		  <div id="simplificator" name="simplificator" class="block">
               <h1>Track 1: Simplificator</h1>
               
-              <h2></h2>What should I do?</h2>
+              <h2>What should I do?</h2>
 <p><h3>Develop a tool/application that provides a simplified version of domain-specific, complex documents, making complex, sectoral texts easier to understand to novice/non-expert people.</h3></p>
 
 <h2>What is it and why is it important?</h2>
