--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 		  <div id="vidi" name="vidi" class="block">
               <h1>Vidi Competition </h1>
 			  <br/>
-            <p> <h3>We’re inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes. You can submit your Web application, App, analysis toolkit, documented API or any other tool that connects, exploits or analyses open or linked data and that addresses real educational needs. Your tool still may contain some bugs, as long as it has a stable set of features and you have some proof that it can be deployed on a realistic scale. </h3></p>
+            <p> <h3>We're inviting you to design and build innovative and robust prototypes and demos for tools that analyse and/or integrate open web data for educational purposes. You can submit your Web application, App, analysis toolkit, documented API or any other tool that connects, exploits or analyses open or linked data and that addresses real educational needs. Your tool still may contain some bugs, as long as it has a stable set of features and you have some proof that it can be deployed on a realistic scale. </h3></p>
 
 <p><h3>We have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
 			<p><h3>The idea is to mash up the vast amount of material and data on the internet that can be used in education, ranging from course data, lecture slides, and online courses to Wikipedia articles and YouTube videos. </h3></p>
@@ -126,10 +126,10 @@
 
 <p><h3><strong>Vidi Tracks</strong></h3></p>
 
-<p><h3>The Vidi competition will comprise of two tracks: </h3></p>
+<p><h3>The Vidi competition comprises of three tracks: </h3></p>
 
-<h3><ul><li>The open track will be for development of any prototype for educational purposes; similar to the Veni competition.</li>
-<li>The focused track will be for development of prototypes that answer the specific 'problems' give below.</li>
+<h3><ul><li>One open track for development of any prototype for educational purposes; similar to the Veni competition.</li>
+<li>Two focused tracks for development of prototypes that answer the specific 'problems' give below.</li>
 </ul></h3>
 
 <p><h3>Focused tracks</h3></p>
