--- a/focused.html
+++ b/focused.html
@@ -142,18 +142,17 @@ For the competition, <a href="http://www.elsevier.com">Elsevier</a> will be show
 The application should use at least two other datasets for enriching the resource. </li><li>
 The submission should be innovative and using current technology, making innovative use of existing technologies, or use and combine existing data in original ways. </li></h3></ul>
 
-<h2>Evaluation metrics</h3>
-<ul><h3><li><a href="http://en.wikipedia.org/wiki/ROUGE_(metric)">ROUGE metric</a></li><li>
-Runtime performance</li><li>
-Manual evaluation of quality, coverage, representativeness etc. </li></h3></ul>
+<h2>How will this be evaluated?</h3>
 
-<h2>Benchmarks</h2>
+<p><h3>You should provide some form of evaluation that your Simplificator submission actually makes resources easier to understand. We suggest one or more of the following evaluation methods:</h3></p>
 
-<p><h3>Text summarisation techniques etc.</h3></p>
-<p><h3>Ground truth: depends on datasets, might have to be created from scratch (eg identifying key terms/topics etc). Usage statistics about access and actual usage.</h3></p>
+<ul><h3><li>A controlled user study in which the 'simplified' resources are compared with the original resources, in terms of comprehension, reading time, memorizability, or some other suitable 'human' performance measure
+</li><li>A qualitative user study that addresses the above-mentioned 'human' performance measures, along with more detailed user feedback
+</li><li>The <a href="http://en.wikipedia.org/wiki/ROUGE_(metric)">ROUGE metric</a> as a benchmark for your automatic summary
+</li><li>A readability score, such as Flesch Reading Ease or Dale-Chall readability formula (see <a href="http://simple.wikipedia.org/wiki/Textual_difficulty#Test_on_texts">Wikipedia</a> for some examples). There are also <a href="http://www.readability-score.com">online tools</a> available</li></h3></ul>
 
 <h2>Relationship to use cases</h2>
-<ul><li><h3></h3><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>
+<ul><li><h3></h3><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a>
 <a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></h3></li></ul>
 
 </div>
