--- a/focused.html
+++ b/focused.html
@@ -152,7 +152,7 @@ The submission should be innovative and using current technology, making innovat
 </li><li>A readability score, such as Flesch Reading Ease or Dale-Chall readability formula (see <a href="http://simple.wikipedia.org/wiki/Textual_difficulty#Test_on_texts">Wikipedia</a> for some examples). There are also <a href="http://www.readability-score.com">online tools</a> available</li></h3></ul>
 
 <h2>Relationship to use cases</h2>
-<ul><li><h3></h3><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a>
+<ul><li><h3><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify</a></li><li>T
 <a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer</a></h3></li></ul>
 
 </div>
