--- a/focused.html
+++ b/focused.html
@@ -161,6 +161,10 @@ The submission should be innovative and using current technology, making innovat
 
 
  <h1>Track 2: Pathfinder</h1>
+ 
+<h2>What should I do?</h2>
+<p><h3>Develop a tool that suggests courses, MOOCs and/or educational resources that are most relevant to the interest and past history of a user, as reflected in their social profiles (LinkedIn, Facebook, Mendeley, Twitter, Google+, etc.)</h3></p>
+<h2>What is already out there?</h3>
 
 <h2>What is it and why is it important? </h2>
 <p><h3>The number of learning opportunities that are now available to learners, whether they are engaged in formal learning or not, is rapidly expending. These opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Such tasks indeed depend not only on the interest of the user, but also on the expertise they have already acquired (either through formal learning or through other means), their history, their learning goals, and the way learning opportunities connect in a coherent and effective learning path. It can also depend on a number of other aspects not directly related to learning: the activities and lifestyle of the user, their mobility, access to ICT tools, etc. In other terms, the challenge here is, through Web Data, to support a user in making the most of the wealth of learning opportunities now available through connecting and matching their personal learning circumstances with these resources, courses and MOOCs. The potential impact of an effective realization of such a tool affects both the providers of learning opportunities through opening up their offers to a broader audience, and the (potential) learner through supporting them in effectively benefiting from the variety of opportunities available, which is especially valuable in areas such as workplace learning and professional training. </h3></p>
