--- a/focused.html
+++ b/focused.html
@@ -187,10 +187,11 @@ or provide recommendation and guidance in any other meaningful and supportive wa
 <ul><h3><li>'multi-source' - should use multiple sources to suggest classes or resources (for example, recommend one course from Coursera, one from another MOOC, and readings from reading list) </h3></li></ul>
 
 <h2>How will this be evaluated?</h2>
-<p><h3>As mentioned above, besides the general LinkedUp evaluation criteria, the evaluation will here focus on two main aspects:</h3></p>
-<ol><h3><li>Effectiveness: The proposed tools will be tested through applying them with the profiles of a number of test users. The evaluation will compare the relevance of the suggested opportunities from the different tools, taking into consideration the different types of opportunities that can be returned (courses, MOOCs, open education resources), as well as how easy the tools make it for the user to assess the relevance of their results. </li><li>
-Efficiency: The evaluation will also compare the response time, requirements in terms of computing resources (from the point of view of the user), as well as the expected scalability of the tools to a large number of learning opportunities and users.</li></h3></ul>
+<p><h3>You should provide some form of evaluation that your Pathfinder submission actually provides recommendations and guidance to find learning opportunities in resources. We suggest one or more of the following evaluation methods:</h3></p>
 
+<ul><h3><li>A controlled user study in which your approach is compared with a baseline approach. The evaluation should take into account the different types of opportunities that can be returned (courses, MOOCs, open education resources), as well as how easy the tools make it for the user to assess the relevance of their results. Measures for effectiveness include comprehension and satisfaction); measures for efficiency include response time and reading time
+</li><li>Automatic comparison of your approach with a baseline - which may be hard to find (it can be a manually created curriculum, or a log of user reading activities). Traditional performance measures include precision, recall, F-measure, mean reciprocal rank
+</li><li>Computational efficiency and performance: response time, requirements in terms of computing resources (from the point of view of the user), as well as the expected scalability of the tools to a large number of learning opportunities and users.</h3></li></ul>
 <h2>Relationship to use cases</h2>
 <ul><h3><li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting employees' learning development</a></li></h3></ul>
 
