--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -77,7 +77,7 @@
                 <li><a href="http://linkedup-challenge.org/usecases.html#semagrow"> SemaGrow =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting Employees' =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#mismuseos"> MisMuseos =></a></li>
-        <li><a href="http://linkedup-challenge.org/usecases.html#local"> Local and Hyper-Local Learning
+        <li><a href="http://linkedup-challenge.org/usecases.html#local"> Local Learning
  =></a></li>
 
       </ul>
