--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -74,8 +74,7 @@
 		            <li><b>Use Cases</a></b></li>
 		             <li><a href="http://linkedup-challenge.org/usecases.html#science">Science Educationizer =></a></li>
         <li><a href="http://linkedup-challenge.org/usecases.html#natural"> NaturalEurope =></a></li>
-                <li><a href="http://linkedup-challenge.org/usecases.html#semagrow"> SemaGrow =></a></li>
-                <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting Employees' =></a></li>
+                <li><a href="http://linkedup-challenge.org/usecases.html#semagrow"> SemaGrow =></a></li
                 <li><a href="http://linkedup-challenge.org/usecases.html#mismuseos"> MisMuseos =></a></li>
         <li><a href="http://linkedup-challenge.org/usecases.html#local"> Local Learning
  =></a></li>
@@ -170,7 +169,7 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                           
                            
 
-                  <div id=" semagrow " name=" semagrow " class="block">
+                  <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>Simplify</h1></div>
                           <h2>Proposer</h2>
               <p><h3><img align="right" src=" http://lakelandsumagrow.com/attachments/Image/vsmall_Sumagrow-14893_2.JPG?template=generic "  height=”150”/><a href=” http://www.sumagrow.org” > SemaGrow</a>                          
