--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -72,11 +72,11 @@
       
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
 		            <li><b>Use Cases</a></b></li>
-		             <li><a href="http://linkedup-challenge.org/usecases.html#science">Science Educationizer =></a></li>
-        <li><a href="http://linkedup-challenge.org/usecases.html#natural">NaturalEurope =></a></li>
-                <li><a href="http://linkedup-challenge.org/usecases.html#semagrow">SemaGrow =></a></li
-                <li><a href="http://linkedup-challenge.org/usecases.html#mismuseos">MisMuseos =></a></li>
-        <li><a href="http://linkedup-challenge.org/usecases.html#local">Local Learning =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases.html#science">Science Educationizer =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases.html#natural">NaturalEurope =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases.html#semagrow">SemaGrow =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases.html#mismuseos">MisMuseos =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases.html#local">Local Learning =></a></li>
 
       </ul>
 	</div>
@@ -113,9 +113,9 @@
 
         <li><a href="#science">Science Educationizer for Interdisciplinary Content & Data</a></li>
         <li><a href="#natural">NaturalEurope</a></li>
-                <li><a href="#semagrow">SemaGrow</a></li>
- <li><a href="#mismuseos">MisMuseos</a></li>
-                <li><a href="#local"> Local and Hyper-Local Learning
+<li><a href="#semagrow">SemaGrow</a></li>
+<li><a href="#mismuseos">MisMuseos</a></li>
+<li><a href="#local"> Local and Hyper-Local Learning
 </a></li>
 
       </ul>
