--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -170,7 +170,7 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                   <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>Simplify</h1></div>
                           <h2>Proposer</h2>
-              <p><h3><img align="right" src="http://lakelandsumagrow.com/attachments/Image/vsmall_Sumagrow-14893_2.JPG?template=generic"  height="150"/><a href="http://www.sumagrow.org"> SemaGrow</a>                          
+              <p><h3><img align="right" src="http://lakelandsumagrow.com/attachments/Image/vsmall_Sumagrow-14893_2.JPG?template=generic"  height="100"/><a href="http://www.sumagrow.org"> SemaGrow</a>                          
 is a project co-funded by the Seventh Framework Programme (FP7) of the European Commision (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
                           
                           <h2>Context</h2>
@@ -226,8 +226,7 @@ is a project realizing a meta-museum via a semantic collection of over 17,000 wo
                   <div id="local" name="local" class="block">
               <div class="usecase_title"><h1> Local and Hyper-Local Learning</h1></div>
                           <h2>Proposer</h2>
-              <p><h3>The <img align="right" src="http://static.bbci.co.uk/frameworks/barlesque/2.51.6/orb/4/img/bbc-blocks-dark.png"><a href="http://www.bbc.co.uk">BBC</a>                          
-The BBC is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
+              <p><h3>The <img align="right" src="http://static.bbci.co.uk/frameworks/barlesque/2.51.6/orb/4/img/bbc-blocks-dark.png"><a href="http://www.bbc.co.uk">BBC</a> is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
 
 <p><h3>The BBC's strategy for learning is 'to inspire a life of learning for everyone' by exploiting the educative potential that exists across the full range of the BBC's output and activities, from news to music, science to the arts, sport and drama.</h3></p>
 
@@ -241,7 +240,7 @@ The BBC is the UK’s Public Service broadcaster and the world’s largest broad
 
 <p><h3>Let’s imagine a family out on a day trip – two adults and two children. The children are 8 and 12. During the day they visit a town with an interesting history, a museum in the town, some shops and a remote field which has a monument in the middle of it. During their travels they pass through a number of villages and numerous miles of countryside.
 
-Let’s assume the GPS and mobile signals are strong throughout the day so we know their location at any moment, we can send them content and they can respond to that content. Let’s also assume we know something of their media consumption habits and their likes and dislikes.
+Let''s assume the GPS and mobile signals are strong throughout the day so we know their location at any moment, we can send them content and they can respond to that content. Let’s also assume we know something of their media consumption habits and their likes and dislikes.
 
 </h3></p>
 
